WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
264857
Fix a platform guard in UIDelegate.mm
https://bugs.webkit.org/show_bug.cgi?id=264857
Summary
Fix a platform guard in UIDelegate.mm
Ada Chan
Reported
2023-11-14 19:51:22 PST
Fix a platform guard in UIDelegate.mm
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-11-14 19:51:44 PST
<
rdar://problem/118433187
>
Ada Chan
Comment 2
2023-11-14 19:53:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/20519
EWS
Comment 3
2023-11-14 22:12:21 PST
Committed
270752@main
(8d056469ba7e): <
https://commits.webkit.org/270752@main
> Reviewed commits have been landed. Closing PR #20519 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug