Fix a platform guard in UIDelegate.mm https://bugs.webkit.org/show_bug.cgi?id=264857 rdar://118433187

Reviewed by Dan Glastonbury.

Prefer PLATFORM(IOS_FAMILY) over TARGET_OS_IPHONE.

* Source/WebKit/UIProcess/Cocoa/UIDelegate.mm:
(WebKit::UIDelegate::setDelegate):

Canonical link: https://commits.webkit.org/270752@main